Se ha añadido un imput de tipo submit para poder subir la informacion del formulario

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
                 <label>Correo: </label>
                 <input type="email" />
+
+                <input type="submit" value="ENVIAR" />
             </form>
         </section>
         <section>
