--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,8 @@
 
                     <label>Correo: </label>
                     <input type="email" />
+
+                    <input type="submit" value="ENVIAR" />
                 </form>
             </section>
             <section>
