Se ha cambiado ligeramente la estructura y los estilos del css

--- a/index2.html
+++ b/index2.html
@@ -18,8 +18,9 @@
 
                     <label>Correo: </label>
                     <input type="email" />
-
-                    <input type="submit" value="ENVIAR" />
+                    <div id="centrar">
+                        <input type="submit" value="ENVIAR" />
+                    </div>
                 </form>
             </section>
             <section>
