Se han añadido ficheros

--- a/posicionamientos/version1.html
+++ b/posicionamientos/version1.html
@@ -4,7 +4,7 @@
     <head>
         <title>Ejercicio Maquetación</title>
         <meta charset="utf-8" />
-        <link href="css/index2.css" rel="stylesheet" />
+        <link href="../css/version1.css" rel="stylesheet" />
     </head>
     <body>
         <main>
@@ -24,7 +24,29 @@
                 </form>
             </section>
             <section>
-                <img src="img/background.jpeg">
+                <header id="encabezadoImagenes">
+                    <h1>Imagenes</h1>
+                </header>
+               <section>
+                    <div>
+                        <img src="../img/background.jpeg">
+                    </div>
+                    <div>
+                        <img src="../img/background.jpeg">
+                    </div>
+                    <div>
+                        <img src="../img/background.jpeg">
+                    </div>
+                    <div>
+                        <img src="../img/background.jpeg">
+                    </div>
+                    <div>
+                        <img src="../img/background.jpeg">
+                    </div>
+                    <div>
+                        <img src="../img/background.jpeg">
+                    </div>
+               </section>
             </section>
             <footer>
                 <p>2022 - Ejercicio básico maquetación</p>
