Se han cambiado las rutas

--- a/posicionamientos/version1.html
+++ b/posicionamientos/version1.html
@@ -4,7 +4,7 @@
     <head>
         <title>Ejercicio Maquetación</title>
         <meta charset="utf-8" />
-        <link href="../css/version1.css" rel="stylesheet" />
+        <link href="../css/posic/version1.css" rel="stylesheet" />
     </head>
     <body>
         <main>
