--- a/index.html
+++ b/index.html
@@ -4,28 +4,14 @@
     <head>
         <title>Ejercicio Maquetación</title>
         <meta charset="utf-8" />
-        <link href="css/index.css" rel="stylesheet" />
     </head>
     <body>
-        <section>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam quis arcu vitae fermentum. Aenean sed dolor non tellus fermentum aliquet vel ut sapien. Mauris ut congue felis, eget laoreet leo. Aenean luctus justo elit, venenatis maximus purus sodales a. Aenean non efficitur tellus, vitae laoreet purus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus tincidunt, dui id iaculis sollicitudin, risus dui iaculis eros, eu consectetur lorem arcu quis nunc. Pellentesque placerat imperdiet lectus, ut sagittis sem tincidunt id. In id est dignissim, egestas lacus in, varius elit. Proin eget sem id sapien pellentesque dictum eget vitae est. Praesent a elit at augue facilisis commodo eget sit amet est. Mauris eget laoreet arcu. Sed efficitur, odio nec porttitor imperdiet, dui sapien faucibus mi, porta elementum lacus sem vitae mi.   
-            </p>
-            <form>
-                <label>Nombre: </label>
-                <input type="text" />
-
-                <label>Correo: </label>
-                <input type="email" />
-
-                <input type="submit" value="ENVIAR" />
-            </form>
-        </section>
-        <section>
-            <img src="img/background.jpeg">
-        </section>
-        <footer>
-            <p>2022 - Ejercicio básico maquetación</p>
-        </footer>
+        <h1>Ejercicio base</h1>
+        <a href="index1.html">Version 1</a>
+        <a href="index2.html">Version 2</a>
+        <h1>Ampliación Posicionamiento</h1>
+        <a href="posicionamientos/version1.html">Prueba 1</a>
+        <a href="posicionamientos/version2.html">Prueba 2</a>
+        <a href="posicionamientos/version3.html">Prueba 3</a>
     </body>
 </html>
