Se han añadido saltos de linea

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <body>
         <h1>Ejercicio base</h1>
         <a href="index1.html">Version 1</a>
-        <a href="index2.html">Version 2</a>
+        <a href="index2.html">Version 2</a><br>
         <h1>Ampliación Posicionamiento</h1>
-        <a href="posicionamientos/version1.html">Prueba 1</a>
-        <a href="posicionamientos/version2.html">Prueba 2</a>
+        <a href="posicionamientos/version1.html">Prueba 1</a><br>
+        <a href="posicionamientos/version2.html">Prueba 2</a><br>
         <a href="posicionamientos/version3.html">Prueba 3</a>
     </body>
 </html>
