--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>Ejercicio base</h1>
-        <a href="index1.html">Version 1</a>
+        <a href="index1.html">Version 1</a><br>
         <a href="index2.html">Version 2</a><br>
         <h1>Ampliación Posicionamiento</h1>
         <a href="posicionamientos/version1.html">Prueba 1</a><br>
