Se han divido la version 1 en 2 y se ha añadido al indice del ejercicio

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Ampliación Posicionamiento</h1>
         <a href="posicionamientos/version1.html">Prueba 1</a><br>
         <a href="posicionamientos/version2.html">Prueba 2</a><br>
-        <a href="posicionamientos/version3.html">Prueba 3</a>
+        <a href="posicionamientos/version3.html">Prueba 3</a><br>
+        <a href="posicionamientos/version4.html">Prueba 4</a><br>
     </body>
 </html>
