--- a/posicionamientos/version4.html
+++ b/posicionamientos/version4.html
@@ -4,7 +4,7 @@
     <head>
         <title>Ejercicio Maquetación</title>
         <meta charset="utf-8" />
-        <link href="../css/posic/version1.css" rel="stylesheet" />
+        <link href="../css/posic/version4.css" rel="stylesheet" />
     </head>
     <body>
         <main>
@@ -24,6 +24,9 @@
                 </form>
             </section>
             <section>
+                <header id="encabezadoImagenes">
+                    <h1>Imagenes</h1>
+                </header>
                <section>
                     <div>
                         <img src="../img/background.jpeg">
